// InfoHub -> InovAMF — DER
// Importar em https://dbdiagram.io (Import > DBML)
//
// Soft delete: idea_areas, teams, team_members, team_mentors, team_notes,
// task_templates, tasks, task_submissions e task_reminders têm deleted_at
// (NULL = ativo). Nunca se roda DELETE; leituras filtram deleted_at IS NULL
// e a exclusão de equipe/tarefa marca os filhos em cascata. Ficam de fora
// users (usa is_active), journey_stages, os logs e as tabelas de token.

Table users {
  id                 uuid      [pk, default: `gen_random_uuid()`]
  name               varchar
  email              varchar   [unique, not null]
  password_hash      varchar
  phone              varchar
  role               varchar   [note: "ADMIN | MENTOR | STUDENT"]
  is_active          boolean
  lgpd_consented_at  timestamp
  created_at         timestamp
  updated_at         timestamp
}

Table student_profiles {
  user_id  uuid      [pk, ref: - users.id, note: "1:1, so para role = STUDENT"]
  course   varchar
  period   varchar
}

Table idea_areas {
  id          int       [pk, increment]
  name        varchar   [note: "unique só entre ativas (índice parcial)"]
  created_at  timestamp
  deleted_at  timestamp [note: "soft delete (NULL = ativa)"]
}

Table journey_stages {
  id      int  [pk, increment]
  number  int  [unique, note: "1 a 6"]
  name    varchar
}

Table teams {
  id                     uuid      [pk, default: `gen_random_uuid()`]
  idea_name              varchar
  idea_description       text
  area_id                int       [ref: > idea_areas.id]
  idea_maturity          varchar   [note: "IDEA | PROTOTYPE | MVP_IN_PROGRESS | MVP_READY"]
  source_origin          varchar
  cohort                 varchar   [note: "turma/semestre, ex: 2026.2"]
  current_stage_id       int       [ref: > journey_stages.id]
  is_ready_for_inovamf   boolean
  created_at             timestamp
  updated_at             timestamp
  deleted_at             timestamp [note: "soft delete (NULL = ativa)"]
}

Table team_members {
  id           uuid      [pk, default: `gen_random_uuid()`]
  team_id      uuid      [ref: > teams.id]
  user_id      uuid      [ref: > users.id]
  member_role  varchar   [note: "LEADER | MEMBER"]
  joined_at    timestamp
  deleted_at   timestamp [note: "soft delete (cascata da equipe)"]

  indexes {
    (team_id, user_id) [unique, note: "parcial: só entre ativos (deleted_at IS NULL)"]
  }
}

Table team_mentors {
  id           uuid      [pk, default: `gen_random_uuid()`]
  team_id      uuid      [ref: > teams.id]
  mentor_id    uuid      [ref: > users.id]
  assigned_at  timestamp
  deleted_at   timestamp [note: "soft delete (cascata da equipe)"]

  indexes {
    (team_id, mentor_id) [unique, note: "parcial: só entre ativos (deleted_at IS NULL)"]
  }
}

Table team_stage_history {
  id          uuid      [pk, default: `gen_random_uuid()`]
  team_id     uuid      [ref: > teams.id]
  stage_id    int       [ref: > journey_stages.id]
  entered_at  timestamp
  exited_at   timestamp
  changed_by  uuid      [ref: > users.id]
}

Table team_notes {
  id          uuid      [pk, default: `gen_random_uuid()`]
  team_id     uuid      [ref: > teams.id]
  author_id   uuid      [ref: > users.id]
  content     text
  created_at  timestamp
  deleted_at  timestamp [note: "soft delete (NULL = ativa)"]
}

Table task_templates {
  id           uuid      [pk, default: `gen_random_uuid()`]
  stage_id     int       [ref: > journey_stages.id]
  title        varchar
  description  text
  created_at   timestamp
  deleted_at   timestamp [note: "soft delete (NULL = ativo)"]
}

Table tasks {
  id           uuid      [pk, default: `gen_random_uuid()`]
  team_id      uuid      [ref: > teams.id]
  stage_id     int       [ref: > journey_stages.id]
  template_id  uuid      [ref: > task_templates.id]
  title        varchar
  description  text
  due_date     date
  status       varchar   [note: "PENDING | IN_PROGRESS | SUBMITTED | LATE | APPROVED | REJECTED"]
  created_by   uuid      [ref: > users.id]
  created_at   timestamp
  updated_at   timestamp
  deleted_at   timestamp [note: "soft delete (cascata da equipe)"]
}

Table task_submissions {
  id                uuid      [pk, default: `gen_random_uuid()`]
  task_id           uuid      [ref: > tasks.id]
  submitted_by      uuid      [ref: > users.id]
  file_url          text      [note: "URL no blob storage OU link externo (Pitch Video)"]
  is_external_link  boolean
  version           int
  is_current        boolean
  submitted_at      timestamp
  review_status     varchar   [note: "PENDING | APPROVED | REJECTED"]
  review_comment    text
  reviewed_by       uuid      [ref: > users.id]
  reviewed_at       timestamp
  deleted_at        timestamp [note: "soft delete (cascata da tarefa/equipe)"]
}

Table task_reminders {
  id         uuid      [pk, default: `gen_random_uuid()`]
  task_id    uuid      [ref: > tasks.id]
  remind_at  timestamp
  is_manual  boolean
  sent       boolean
  sent_at    timestamp
  created_at timestamp
  deleted_at timestamp [note: "soft delete (cascata da tarefa/equipe)"]
}

Table email_notifications {
  id                    uuid      [pk, default: `gen_random_uuid()`]
  recipient_user_id     uuid      [ref: > users.id]
  type                  varchar   [note: "TASK_ASSIGNED | DEADLINE_REMINDER | ... (ver schema.sql)"]
  subject               varchar
  related_team_id       uuid      [ref: > teams.id]
  related_task_id       uuid      [ref: > tasks.id]
  status                varchar   [note: "SENT | FAILED | RETRIED"]
  provider_message_id   varchar   [note: "id retornado pelo Resend"]
  sent_at               timestamp
  created_at            timestamp
}

Table audit_logs {
  id             uuid      [pk, default: `gen_random_uuid()`]
  actor_user_id  uuid      [ref: > users.id]
  entity_type    varchar
  entity_id      uuid
  action         varchar
  metadata       json
  created_at     timestamp
}

Table refresh_tokens {
  id              uuid      [pk, default: `gen_random_uuid()`]
  user_id         uuid      [ref: > users.id]
  token_hash      varchar   [unique, note: "hash SHA-256, nunca o token bruto"]
  issued_at       timestamp
  expires_at      timestamp
  revoked_at      timestamp [note: "NULL = ainda valido"]
  replaced_by_id  uuid      [ref: > refresh_tokens.id, note: "cadeia de rotacao"]
  user_agent      varchar
  ip_address      varchar
  created_at      timestamp
}

Table password_reset_tokens {
  id          uuid      [pk, default: `gen_random_uuid()`]
  user_id     uuid      [ref: > users.id]
  token_hash  varchar   [unique, note: "hash SHA-256, nunca o token bruto"]
  expires_at  timestamp [note: "janela curta, ex.: 1h"]
  used_at     timestamp [note: "NULL = ainda nao usado"]
  created_at  timestamp
}
